[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py-qgis-wps"
description = "Py-Qgis-WPS is an implementation of the Web Processing Service standard from the Open Geospatial Consortium"
readme = "README.md"
requires-python = ">= 3.9"
classifiers=[
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
dependencies = [
    "tornado >= 6",
    "pyzmq >= 17",
    "PyYAML",
    "OWSLib",
    "psutil",
    "redis",
    "typing-extensions",
]

dynamic = ["version"]

[[project.authors]]
name = "3Liz"
email = "david.marteau@3liz.com"

[[project.maintainers]]
name = "David Marteau"
email = "david.marteau@3liz.com"

[project.urls]
Homepage = "https://gitthub.com/3liz/py-qgis-server"
Repository = "https://github.com/3liz/py-qgis-server.git"
Documentation = "https://docs.3liz.org/py-qgis-server"

[project.scripts]
wpsserver = "pyqgiswps.wpsserver:main"
wpsserverr-check = "pyqgiswps.healthcheck:main"

[project.entry-points."py_qgis_wps.access_policy"]
lizmap_acl = "pyqgisservercontrib.lizmapacl.filters:register_policy"


[tool.setuptools.dynamic]
version = { file = ["VERSION"] }

[tool.setuptools.packages.find]
include = [
    "pyqgiswps",
    "pyqgiswps.*",
    "pyqgisservercontrib.*",
]

[tool.bandit]
skips = ["B410", "B320", "B403", "B301"]
